--- a/src/main/resources/templates/exam03.html
+++ b/src/main/resources/templates/exam03.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <form th:action="@{/exam03/buy-item}" method="post">
-商品1: <input type="text" name="item1"><br>
-商品2: <input type="text" name="item2"><br>
-商品3: <input type="text" name="item3"><br>
+商品1: <input type="text" name="item1">円<br>
+商品2: <input type="text" name="item2">円<br>
+商品3: <input type="text" name="item3">円<br>
 <button>購入</button>
 </form>
 </body>
