HTMLのエラー文字カラーを変更した。

--- a/src/main/resources/templates/exam04.html
+++ b/src/main/resources/templates/exam04.html
@@ -7,12 +7,12 @@
 <body>
 <h1>ユーザ登録</h1>
 <form th:action="@{/exam04/create}" th:object="${userForm}" method="post">
-<div th:errors="*{name}"></div>
+<div th:errors="*{name}" style="color:red"></div>
 名前: <input type="text" name="name" th:field="*{name}"><br>
-<div th:errors="*{age}"></div>
+<div th:errors="*{age}" style="color:red"></div>
 年齢: <input type="text" name="age" th:field="*{age}"><br>
 コメント: <br>
-<div th:errors="*{comment}"></div>
+<div th:errors="*{comment}" style="color:red"></div>
 <textarea name="comment" rows="10" cols="30"th:field="*{comment}"></textarea>
 <br>
 <button>登録</button>
